--- a/shippable.yml
+++ b/shippable.yml
@@ -7,6 +7,7 @@ install:
    - mkdir downloads
    - cd downloads
    - wget http://downloads.sourceforge.net/project/numpy/NumPy/1.9.2/numpy-1.9.2.tar.gz?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fnumpy%2Ffiles%2F&ts=1427742438&use_mirror=kaz
+   - tar -xzvf numpy-1.9.2.tar.gz
    - cd numpy-1.9.2
    - sudo python setup.py install
 
